--- a/{{cookiecutter.project_slug}}/package.json
+++ b/{{cookiecutter.project_slug}}/package.json
@@ -3,6 +3,8 @@
   "description": "{{cookiecutter.description}}",
   "version": "{{cookiecutter.version}}",
   "author": "{{cookiecutter.author_name}}",
+  {% if cookiecutter.open_source_license != 'Not open source' -%}"license": "{{cookiecutter.open_source_license}}",{% endif %}
+  {% if cookiecutter.open_source_license == 'Not open source' -%}"private": true,{% endif %}
   "scripts": {
     "dev": "cross-env NODE_ENV=development webpack-dev-server",
     "build": "cross-env NODE_ENV=production webpack --progress --hide-modules"
@@ -12,7 +14,7 @@
     "babel-core": "^6.25.0",
     "babel-loader": "^7.0.0",
     "babel-preset-env": "^1.5.2",
-    {% if cookiecutter.use_ckeditor == 'Both' or 'Frontend' -%}"ckeditor": "^4.7.3",{% endif %}
+    {% if cookiecutter.use_ckeditor == "Both" or cookiecutter.use_ckeditor == "Frontend" -%}"ckeditor": "^4.7.3",{% endif %}
     "compression-webpack-plugin": "^1.0.1",
     "cross-env": "^5.0.1",
     "css-loader": "^0.28.4",
@@ -22,7 +24,7 @@
     "sass-loader": "^6.0.6",
     "string-replace-loader": "^1.3.0",
     "vue": "^2.3.4",
-    {% if cookiecutter.use_ckeditor == 'Both' or 'Frontend' -%}"vue-ckeditor2": "^1.15.0",{% endif %}
+    {% if cookiecutter.use_ckeditor == "Both" or cookiecutter.use_ckeditor == "Frontend" -%}"vue-ckeditor2": "^1.15.0",{% endif %}
     "vue-loader": "^12.2.1",
     "vue-meta": "^1.2.0",
     "vue-progressbar": "^0.7.3",
