--- a/{{cookiecutter.project_slug}}/env.example
+++ b/{{cookiecutter.project_slug}}/env.example
@@ -16,7 +16,7 @@ PRODUCTION_PASSWORD={% endif %}
 # Amazon S3
 AWS_ACCESS_KEY_ID=
 AWS_SECRET_ACCESS_KEY=
-AWS_STORAGE_BUCKET_NAME={{cookiecutter.project_slug}}
+AWS_STORAGE_BUCKET_NAME={{ cookiecutter.project_slug|replace('_', '') }}
 AWS_STORAGE_BUCKET_REGION=
 
 # Used with email
