--- a/{{cookiecutter.project_slug}}/env.example
+++ b/{{cookiecutter.project_slug}}/env.example
@@ -1,5 +1,7 @@
-# General settings
+# Production settings (uncomment for production)
 #DJANGO_SETTINGS_MODULE=config.settings.production
+
+# General settings
 DJANGO_DOMAIN={{cookiecutter.domain_name}}
 DJANGO_ALLOWED_HOSTS=.{{ cookiecutter.domain_name }}
 DJANGO_SECRET_KEY=CHANGEME!!!
