--- a/{{cookiecutter.project_slug}}/docker-compose-prod.yml
+++ b/{{cookiecutter.project_slug}}/docker-compose-prod.yml
@@ -40,7 +40,21 @@ services:
 
   redis:
     image: redis:3.0
+{% if cookiecutter.use_celery == 'y' %}
+  celeryworker:
+    <<: *django
+    depends_on:
+     - postgres
+     - redis
+    command: /start-celeryworker.sh
 
+  celerybeat:
+    <<: *django
+    depends_on:
+      - postgres
+      - redis
+    command: /start-celerybeat.sh
+{% endif %}
 
   webpack:
     build:
