--- a/{{cookiecutter.project_slug}}/package.json
+++ b/{{cookiecutter.project_slug}}/package.json
@@ -25,6 +25,7 @@
     "string-replace-loader": "^1.3.0",
     "vue": "^2.3.4",
     {% if cookiecutter.use_ckeditor == "Both" or cookiecutter.use_ckeditor == "Frontend" -%}"vue-ckeditor2": "^1.15.0",{% endif %}
+    {% if cookiecutter.use_vue_material == 'y' %}"vue-material": "^0.8.1",{% endif %}
     "vue-loader": "^12.2.1",
     "vue-meta": "^1.2.0",
     "vue-progressbar": "^0.7.3",
