--- a/{{cookiecutter.project_slug}}/env.example
+++ b/{{cookiecutter.project_slug}}/env.example
@@ -2,8 +2,8 @@
 #DJANGO_SETTINGS_MODULE=config.settings.production
 
 # General settings
-DJANGO_DOMAIN={{cookiecutter.domain_name}}
-DJANGO_ALLOWED_HOSTS=.{{ cookiecutter.domain_name }}
+DJANGO_DOMAIN={{cookiecutter.domain}}
+DJANGO_ALLOWED_HOSTS=.{{ cookiecutter.domain }}
 DJANGO_SECRET_KEY=CHANGEME!!!
 
 # PostgreSQL
@@ -24,8 +24,8 @@ AWS_STORAGE_BUCKET_REGION=
 # Used with email
 DJANGO_MAILGUN_API_PUB=
 DJANGO_MAILGUN_API_KEY=
-MAILGUN_SENDER_DOMAIN=mg.{{cookiecutter.domain_name}}
-DJANGO_SERVER_EMAIL=info@{{cookiecutter.domain_name}}
+MAILGUN_SENDER_DOMAIN=mg.{{cookiecutter.domain}}
+DJANGO_SERVER_EMAIL=info@{{cookiecutter.domain}}
 
 {% if cookiecutter.use_sentry == 'y' -%}
 # Sentry
