--- a/{{cookiecutter.project_slug}}/package.json
+++ b/{{cookiecutter.project_slug}}/package.json
@@ -28,7 +28,7 @@
     {% if cookiecutter.use_vue_material == 'y' %}"vue-material": "^0.8.1",{% endif %}
     "vue-loader": "^12.2.1",
     "vue-meta": "^1.2.0",
-    "vue-progressbar": "^0.7.3",
+    {% if cookiecutter.use_progressbar == 'y' -%}"vue-progressbar": "^0.7.3",{% endif %}
     "vue-router": "^2.7.0",
     "vue-template-compiler": "^2.3.4",
     "vuex": "^2.3.1",
