--- a/{{cookiecutter.project_slug}}/env.example
+++ b/{{cookiecutter.project_slug}}/env.example
@@ -13,7 +13,8 @@ POSTGRES_PASSWORD=mysecretpass
 {% if cookiecutter.use_travis == 'y' -%}
 # Travis deploy
 PRODUCTION_USER=root
-PRODUCTION_PASSWORD={% endif %}
+PRODUCTION_PASSWORD=
+{% endif %}
 
 # Amazon S3
 AWS_ACCESS_KEY_ID=
@@ -29,8 +30,10 @@ DJANGO_SERVER_EMAIL=info@{{cookiecutter.domain}}
 
 {% if cookiecutter.use_sentry == 'y' -%}
 # Sentry
-DJANGO_SENTRY_DSN={% endif %}
+DJANGO_SENTRY_DSN=
+{% endif %}
 
 {% if cookiecutter.use_yandex_metrika == 'y' -%}
 # YandexMetrika
-YANDEX_METRIKA={% endif %}
+YANDEX_METRIKA=
+{% endif %}
