--- a/{{cookiecutter.project_slug}}/package.json
+++ b/{{cookiecutter.project_slug}}/package.json
@@ -14,7 +14,7 @@
     "babel-core": "^6.25.0",
     "babel-loader": "^7.0.0",
     "babel-preset-env": "^1.5.2",
-    {% if cookiecutter.use_ckeditor == "Both" or cookiecutter.use_ckeditor == "Frontend" -%}"ckeditor": "^4.7.3",{% endif %}
+    {% if cookiecutter.use_ckeditor == "Both" or cookiecutter.use_ckeditor == "Frontend" -%}"ckeditor": "^4.7.3",{% endif -%}
     "compression-webpack-plugin": "^1.0.1",
     "cross-env": "^5.0.1",
     "css-loader": "^0.28.4",
@@ -24,11 +24,11 @@
     "sass-loader": "^6.0.6",
     "string-replace-loader": "^1.3.0",
     "vue": "^2.3.4",
-    {% if cookiecutter.use_ckeditor == "Both" or cookiecutter.use_ckeditor == "Frontend" -%}"vue-ckeditor2": "^1.15.0",{% endif %}
-    {% if cookiecutter.use_vue_material == 'y' %}"vue-material": "^0.8.1",{% endif %}
+    {% if cookiecutter.use_ckeditor == "Both" or cookiecutter.use_ckeditor == "Frontend" -%}"vue-ckeditor2": "^1.15.0",{% endif -%}
+    {% if cookiecutter.use_vue_material == 'y' -%}"vue-material": "^0.8.1",{% endif -%}
     "vue-loader": "^12.2.1",
     "vue-meta": "^1.2.0",
-    {% if cookiecutter.use_progressbar == 'y' -%}"vue-progressbar": "^0.7.3",{% endif %}
+    {% if cookiecutter.use_progressbar == 'y' -%}"vue-progressbar": "^0.7.3",{% endif -%}
     "vue-router": "^2.7.0",
     "vue-template-compiler": "^2.3.4",
     "vuex": "^2.3.1",
