--- a/{{cookiecutter.project_slug}}/env.example
+++ b/{{cookiecutter.project_slug}}/env.example
@@ -2,8 +2,8 @@
 #DJANGO_SETTINGS_MODULE=config.settings.production
 
 # General settings
-DJANGO_DOMAIN={{cookiecutter.domain_name}}
-DJANGO_ALLOWED_HOSTS=.{{ cookiecutter.domain_name }}
+DJANGO_DOMAIN={{cookiecutter.domain}}
+DJANGO_ALLOWED_HOSTS=.{{ cookiecutter.domain }}
 DJANGO_SECRET_KEY=CHANGEME!!!
 
 # PostgreSQL
@@ -13,7 +13,8 @@ POSTGRES_PASSWORD=mysecretpass
 {% if cookiecutter.use_travis == 'y' -%}
 # Travis deploy
 PRODUCTION_USER=root
-PRODUCTION_PASSWORD={% endif %}
+PRODUCTION_PASSWORD=
+{% endif %}
 
 # Amazon S3
 AWS_ACCESS_KEY_ID=
@@ -24,13 +25,15 @@ AWS_STORAGE_BUCKET_REGION=
 # Used with email
 DJANGO_MAILGUN_API_PUB=
 DJANGO_MAILGUN_API_KEY=
-MAILGUN_SENDER_DOMAIN=mg.{{cookiecutter.domain_name}}
-DJANGO_SERVER_EMAIL=info@{{cookiecutter.domain_name}}
+MAILGUN_SENDER_DOMAIN=mg.{{cookiecutter.domain}}
+DJANGO_SERVER_EMAIL=info@{{cookiecutter.domain}}
 
 {% if cookiecutter.use_sentry == 'y' -%}
 # Sentry
-DJANGO_SENTRY_DSN={% endif %}
+DJANGO_SENTRY_DSN=
+{% endif %}
 
 {% if cookiecutter.use_yandex_metrika == 'y' -%}
 # YandexMetrika
-YANDEX_METRIKA={% endif %}
+YANDEX_METRIKA=
+{% endif %}
