--- a/{{cookiecutter.project_slug}}/package.json
+++ b/{{cookiecutter.project_slug}}/package.json
@@ -22,7 +22,7 @@
     "lodash": "^4.17.4",
     "node-sass": "^4.5.3",
     "sass-loader": "^6.0.6",
-    "string-replace-loader": "^1.3.0",
+    {% if cookiecutter.static_and_media == 'Amazon S3 for static and media' -%}"string-replace-loader": "^1.3.0",{% endif -%}
     "vue": "^2.3.4",
     {% if cookiecutter.use_ckeditor == "Both" or cookiecutter.use_ckeditor == "Frontend" -%}"vue-ckeditor2": "^1.15.0",{% endif -%}
     {% if cookiecutter.use_vue_material == 'y' -%}"vue-material": "^0.8.1",{% endif -%}
@@ -33,7 +33,7 @@
     "vue-template-compiler": "^2.3.4",
     "vuex": "^2.3.1",
     "webpack": "^2.6.1",
-    "webpack-dev-server": "^2.4.5",
-    "webpack-s3-plugin": "git+https://github.com/eyupci/s3-plugin-webpack.git#master"
+    {% if cookiecutter.static_and_media == 'Amazon S3 for static and media' -%}"webpack-s3-plugin": "git+https://github.com/eyupci/s3-plugin-webpack.git#master",{% endif -%}
+    "webpack-dev-server": "^2.4.5"
   }
 }
