Google Analytics integration

--- a/{{cookiecutter.project_slug}}/env.example
+++ b/{{cookiecutter.project_slug}}/env.example
@@ -33,7 +33,12 @@ DJANGO_SERVER_EMAIL=info@{{cookiecutter.domain}}
 DJANGO_SENTRY_DSN=
 {% endif %}
 
-{% if cookiecutter.use_yandex_metrika == 'y' -%}
-# YandexMetrika
+{% if cookiecutter.analytics == 'Google Analytics' -%}
+# Google Analytics
+GOOGLE_ANALYTICS=
+{% endif %}
+
+{% if cookiecutter.analytics == 'Yandex Metrika' -%}
+# Yandex Metrika
 YANDEX_METRIKA=
 {% endif %}
