--- a/{{cookiecutter.project_slug}}/package.json
+++ b/{{cookiecutter.project_slug}}/package.json
@@ -14,7 +14,7 @@
     "babel-core": "^6.25.0",
     "babel-loader": "^7.0.0",
     "babel-preset-env": "^1.5.2",
-    {% if cookiecutter.use_ckeditor == "Both" or cookiecutter.use_ckeditor == "Frontend" -%}"ckeditor": "^4.7.3",{% endif -%}
+    {% if cookiecutter.use_ckeditor == "Everywhere" or cookiecutter.use_ckeditor == "Frontend" -%}"ckeditor": "^4.7.3",{% endif -%}
     {% if cookiecutter.static_and_media == 'Amazon S3 for static and media' -%}"compression-webpack-plugin": "^1.0.1",{% endif -%}
     "cross-env": "^5.0.1",
     "css-loader": "^0.28.4",
@@ -25,7 +25,7 @@
     {% if cookiecutter.static_and_media == 'Amazon S3 for static and media' -%}"string-replace-loader": "^1.3.0",{% endif -%}
     "vue": "^2.3.4",
     {% if cookiecutter.analytics == "Google Analytics" -%}"vue-analytics": "^5.3.2",{% endif -%}
-    {% if cookiecutter.use_ckeditor == "Both" or cookiecutter.use_ckeditor == "Frontend" -%}"vue-ckeditor2": "^1.15.0",{% endif -%}
+    {% if cookiecutter.use_ckeditor == "Everywhere" or cookiecutter.use_ckeditor == "Frontend" -%}"vue-ckeditor2": "^1.15.0",{% endif -%}
     {% if cookiecutter.use_vue_material == 'y' -%}"vue-material": "^0.8.1",{% endif -%}
     "vue-loader": "^12.2.1",
     "vue-meta": "^1.2.0",
