--- a/{{cookiecutter.project_slug}}/package.json
+++ b/{{cookiecutter.project_slug}}/package.json
@@ -3,8 +3,8 @@
   "description": "{{cookiecutter.description}}",
   "version": "{{cookiecutter.version}}",
   "author": "{{cookiecutter.author}}",
-  {% if cookiecutter.license != 'Not open source' -%}"license": "{{cookiecutter.license}}",{% endif %}
-  {% if cookiecutter.license == 'Not open source' -%}"private": true,{% endif %}
+  {% if cookiecutter.license != 'Not open source' %}"license": "{{cookiecutter.license}}",{% endif %}
+  {% if cookiecutter.license == 'Not open source' %}"private": true,{% endif %}
   "scripts": {
     "dev": "cross-env NODE_ENV=development webpack-dev-server",
     "build": "cross-env NODE_ENV=production webpack --progress --hide-modules"
@@ -14,8 +14,8 @@
     "babel-core": "^6.25.0",
     "babel-loader": "^7.0.0",
     "babel-preset-env": "^1.5.2",
-    {% if cookiecutter.use_ckeditor == "Everywhere" or cookiecutter.use_ckeditor == "Frontend" -%}"ckeditor": "^4.7.3",{% endif -%}
-    {% if cookiecutter.static_and_media == 'Amazon S3 for static and media' -%}"compression-webpack-plugin": "^1.0.1",{% endif -%}
+    {% if cookiecutter.use_ckeditor == "Everywhere" or cookiecutter.use_ckeditor == "Frontend" %}"ckeditor": "^4.7.3",{% endif %}
+    {% if cookiecutter.static_and_media == 'Amazon S3 for static and media' %}"compression-webpack-plugin": "^1.0.1",{% endif %}
     "cross-env": "^5.0.1",
     "css-loader": "^0.28.4",
     "file-loader": "^0.11.2",
@@ -23,19 +23,19 @@
     "lodash": "^4.17.4",
     "node-sass": "^4.5.3",
     "sass-loader": "^6.0.6",
-    {% if cookiecutter.static_and_media == 'Amazon S3 for static and media' -%}"string-replace-loader": "^1.3.0",{% endif -%}
+    {% if cookiecutter.static_and_media == 'Amazon S3 for static and media' %}"string-replace-loader": "^1.3.0",{% endif %}
     "vue": "^2.3.4",
-    {% if cookiecutter.analytics == "Google Analytics" -%}"vue-analytics": "^5.3.2",{% endif -%}
-    {% if cookiecutter.use_ckeditor == "Everywhere" or cookiecutter.use_ckeditor == "Frontend" -%}"vue-ckeditor2": "^1.15.0",{% endif -%}
-    {% if cookiecutter.use_vue_material == 'y' -%}"vue-material": "^0.8.1",{% endif -%}
+    {% if cookiecutter.analytics == "Google Analytics" %}"vue-analytics": "^5.3.2",{% endif %}
+    {% if cookiecutter.use_ckeditor == "Everywhere" or cookiecutter.use_ckeditor == "Frontend" %}"vue-ckeditor2": "^1.15.0",{% endif %}
+    {% if cookiecutter.use_vue_material == 'y' %}"vue-material": "^0.8.1",{% endif %}
     "vue-loader": "^12.2.1",
     "vue-meta": "^1.2.0",
-    {% if cookiecutter.use_progressbar == 'y' -%}"vue-progressbar": "^0.7.3",{% endif -%}
+    {% if cookiecutter.use_progressbar == 'y' %}"vue-progressbar": "^0.7.3",{% endif %}
     "vue-router": "^2.7.0",
     "vue-template-compiler": "^2.3.4",
     "vuex": "^2.3.1",
     "webpack": "^2.6.1",
-    {% if cookiecutter.static_and_media == 'Amazon S3 for static and media' -%}"webpack-s3-plugin": "git+https://github.com/eyupci/s3-plugin-webpack.git#master",{% endif -%}
+    {% if cookiecutter.static_and_media == 'Amazon S3 for static and media' %}"webpack-s3-plugin": "git+https://github.com/eyupci/s3-plugin-webpack.git#master",{% endif %}
     "webpack-dev-server": "^2.4.5"
   }
 }
