--- a/{{cookiecutter.project_slug}}/package.json
+++ b/{{cookiecutter.project_slug}}/package.json
@@ -18,17 +18,18 @@
     {% if cookiecutter.static_and_media == 'Amazon S3 for static and media' %}"compression-webpack-plugin": "^1.0.1",{% endif %}
     "cross-env": "^5.0.1",
     "css-loader": "^0.28.4",
-    "file-loader": "^0.11.2",
+    "file-loader": "^1.1.4",
     "foundation-sites": "^6.4.1",
     "lodash": "^4.17.4",
     "node-sass": "^4.5.3",
     "sass-loader": "^6.0.6",
     {% if cookiecutter.static_and_media == 'Amazon S3 for static and media' %}"string-replace-loader": "^1.3.0",{% endif %}
+    "url-loader": "^0.5.8",
     "vue": "^2.3.4",
     {% if cookiecutter.analytics == "Google Analytics" %}"vue-analytics": "^5.3.2",{% endif %}
     {% if cookiecutter.use_ckeditor == "Everywhere" or cookiecutter.use_ckeditor == "Frontend" %}"vue-ckeditor2": "^1.15.0",{% endif %}
     {% if cookiecutter.use_vue_material == 'y' %}"vue-material": "^0.8.1",{% endif %}
-    "vue-loader": "^12.2.1",
+    "vue-loader": "^13.3.0",
     "vue-meta": "^1.2.0",
     {% if cookiecutter.use_progressbar == 'y' %}"vue-progressbar": "^0.7.3",{% endif %}
     "vue-router": "^2.7.0",
