--- a/{{cookiecutter.project_slug}}/.babelrc
+++ b/{{cookiecutter.project_slug}}/.babelrc
@@ -1,5 +1,7 @@
 {
   "presets": [
-    ["env", { "modules": false }]
-  ]
+    ["env", {"modules": false}],
+    "stage-2"
+  ],
+  "plugins": ["transform-runtime"]
 }
