--- a/{{cookiecutter.project_slug}}/package.json
+++ b/{{cookiecutter.project_slug}}/package.json
@@ -15,8 +15,8 @@
     "babel-loader": "^7.0.0",
     "babel-polyfill": "^6.26.0",
     "babel-preset-env": "^1.5.2",
-    {% if cookiecutter.use_ckeditor == "Everywhere" or cookiecutter.use_ckeditor == "Frontend" %}"ckeditor": "^4.7.3",{% endif %}
     {% if cookiecutter.static_and_media == 'Amazon S3 for static and media' %}"compression-webpack-plugin": "^1.0.1",{% endif %}
+    {% if cookiecutter.use_ckeditor == "y" %}"ckeditor": "^4.7.3",{% endif %}
     "cross-env": "^5.0.1",
     "css-loader": "^0.28.4",
     "file-loader": "^1.1.4",
@@ -28,7 +28,7 @@
     "url-loader": "^0.5.8",
     "vue": "^2.3.4",
     {% if cookiecutter.analytics == "Google Analytics" %}"vue-analytics": "^5.3.2",{% endif %}
-    {% if cookiecutter.use_ckeditor == "Everywhere" or cookiecutter.use_ckeditor == "Frontend" %}"vue-ckeditor2": "^1.15.0",{% endif %}
+    {% if cookiecutter.use_ckeditor == "y" %}"vue-ckeditor2": "^1.15.0",{% endif %}
     {% if cookiecutter.use_vue_material == 'y' %}"vue-material": "^0.8.1",{% endif %}
     "vue-loader": "^13.3.0",
     "vue-meta": "^1.2.0",
