--- a/{{cookiecutter.project_slug}}/package.json
+++ b/{{cookiecutter.project_slug}}/package.json
@@ -15,8 +15,8 @@
     "babel-loader": "^7.0.0",
     "babel-polyfill": "^6.26.0",
     "babel-preset-env": "^1.5.2",
-    {% if cookiecutter.static_and_media == 'Amazon S3 for static and media' %}"compression-webpack-plugin": "^1.0.1",{% endif %}
     {% if cookiecutter.use_ckeditor == "y" %}"ckeditor": "^4.7.3",{% endif %}
+    {% if cookiecutter.static_and_media == 'Amazon S3' %}"compression-webpack-plugin": "^1.0.1",{% endif %}
     "cross-env": "^5.0.1",
     "css-loader": "^0.28.4",
     "file-loader": "^1.1.4",
@@ -24,7 +24,7 @@
     "lodash": "^4.17.4",
     "node-sass": "^4.5.3",
     "sass-loader": "^6.0.6",
-    {% if cookiecutter.static_and_media == 'Amazon S3 for static and media' %}"string-replace-loader": "^1.3.0",{% endif %}
+    {% if cookiecutter.static_and_media == 'Amazon S3' %}"string-replace-loader": "^1.3.0",{% endif %}
     "url-loader": "^0.5.8",
     "vue": "^2.3.4",
     {% if cookiecutter.analytics == "Google Analytics" %}"vue-analytics": "^5.3.2",{% endif %}
@@ -37,7 +37,7 @@
     "vue-template-compiler": "^2.3.4",
     "vuex": "^2.3.1",
     "webpack": "^2.6.1",
-    {% if cookiecutter.static_and_media == 'Amazon S3 for static and media' %}"webpack-s3-plugin": "git+https://github.com/eyupci/s3-plugin-webpack.git#master",{% endif %}
+    {% if cookiecutter.static_and_media == 'Amazon S3' %}"webpack-s3-plugin": "git+https://github.com/eyupci/s3-plugin-webpack.git#master",{% endif %}
     "webpack-dev-server": "^2.4.5"
   }
 }
