Google Analytics: variable is a string now

--- a/{{cookiecutter.project_slug}}/env.example
+++ b/{{cookiecutter.project_slug}}/env.example
@@ -35,7 +35,7 @@ DJANGO_SENTRY_DSN=
 
 {% if cookiecutter.analytics == 'Google Analytics' -%}
 # Google Analytics
-GOOGLE_ANALYTICS=
+GOOGLE_ANALYTICS=UA-XXXXXXXXX-X
 {% endif %}
 
 {% if cookiecutter.analytics == 'Yandex Metrika' -%}
