--- a/{{cookiecutter.project_slug}}/pytest.ini
+++ b/{{cookiecutter.project_slug}}/pytest.ini
@@ -1,3 +1,3 @@
 [pytest]
 DJANGO_SETTINGS_MODULE=config.settings.test
-addopts = --cov-report term:skip-covered --cov-report html --cov={{cookiecutter.project_slug}}
+addopts = --cov-report term:skip-covered --cov-report html --cov={{cookiecutter.project_slug}} --ignore=node_modules
