--- a/{{cookiecutter.project_slug}}/package.json
+++ b/{{cookiecutter.project_slug}}/package.json
@@ -33,6 +33,7 @@
     "vue-loader": "^13.3.0",
     "vue-meta": "^1.2.0",
     {% if cookiecutter.use_progressbar == 'y' %}"vue-progressbar": "^0.7.3",{% endif %}
+    {% if cookiecutter.use_sentry == 'y' %}"vue-raven": "^0.1.0",{% endif %}
     "vue-router": "^2.7.0",
     "vue-template-compiler": "^2.3.4",
     {% if cookiecutter.analytics == "Yandex Metrika" %}"vue-yandex-metrika": "^1.4.0",{% endif %}
