Sentry env vars are renamed

--- a/{{cookiecutter.project_slug}}/env.example
+++ b/{{cookiecutter.project_slug}}/env.example
@@ -30,7 +30,8 @@ DJANGO_SERVER_EMAIL=info@{{cookiecutter.domain}}
 
 {% if cookiecutter.use_sentry == 'y' -%}
 # Sentry
-DJANGO_SENTRY_DSN=
+SENTRY_DSN=
+SENTRY_PUBLIC_DSN=
 {% endif %}
 
 {% if cookiecutter.analytics == 'Google Analytics' -%}
