--- a/{{cookiecutter.project_slug}}/package.json
+++ b/{{cookiecutter.project_slug}}/package.json
@@ -7,17 +7,28 @@
   {% if cookiecutter.license == 'Not open source' %}"private": true,{% endif %}
   "scripts": {
     "dev": "cross-env NODE_ENV=development webpack-dev-server",
-    "build": "cross-env NODE_ENV=production webpack --progress --hide-modules"
+    "build": "cross-env NODE_ENV=production webpack --progress --hide-modules",
+    "lint": "eslint --ext .js,.vue {{cookiecutter.project_slug}}/static"
   },
   "dependencies": {
     "axios": "^0.16.2",
     "babel-core": "^6.25.0",
+    "babel-eslint": "^8.2.1",
     "babel-loader": "^7.0.0",
     "babel-polyfill": "^6.26.0",
     "babel-preset-env": "^1.5.2",
     {% if cookiecutter.static_and_media == 'Amazon S3 (static and media)' %}"compression-webpack-plugin": "^1.0.1",{% endif %}
     "cross-env": "^5.0.1",
     "css-loader": "^0.28.4",
+    "eslint": "^4.15.0",
+    "eslint-config-standard": "^10.2.1",
+    "eslint-friendly-formatter": "^3.0.0",
+    "eslint-loader": "^1.7.1",
+    "eslint-plugin-import": "^2.7.0",
+    "eslint-plugin-node": "^5.2.0",
+    "eslint-plugin-promise": "^3.4.0",
+    "eslint-plugin-standard": "^3.0.1",
+    "eslint-plugin-vue": "^4.0.0",
     "file-loader": "^1.1.4",
     "foundation-sites": "^6.4.1",
     "lodash": "^4.17.4",
