--- a/{{cookiecutter.project_slug}}/docker-compose.yml
+++ b/{{cookiecutter.project_slug}}/docker-compose.yml
@@ -5,7 +5,7 @@ volumes:
   postgres_backup_local: {}
 
 services:
-  django:{% if cookiecutter.use_celery == 'y' %} &django{% endif %}
+  django:
     build:
       context: .
       dockerfile: ./compose/local/django/Dockerfile
@@ -35,29 +35,6 @@ services:
     image: mailhog/mailhog:v1.0.0
     ports:
       - "8025:8025"
-{% endif %}
-
-{% if cookiecutter.use_celery == 'y' %}
-  redis:
-    image: redis:3.0
-
-  celeryworker:
-    # https://github.com/docker/compose/issues/3220
-    <<: *django
-    depends_on:
-      - redis
-      - postgres
-    ports: []
-    command: /start-celeryworker.sh
-
-  celerybeat:
-    # https://github.com/docker/compose/issues/3220
-    <<: *django
-    depends_on:
-      - redis
-      - postgres
-    ports: []
-    command: /start-celerybeat.sh
 {% endif %}
 
   webpack:
