refactor compose, serve static by Caddy

--- a/{{cookiecutter.project_slug}}/.travis.yml
+++ b/{{cookiecutter.project_slug}}/.travis.yml
@@ -4,4 +4,5 @@ group: edge
 services: docker
 language: python
 python: '3.6'
-script: docker-compose run django py.test
+script: docker-compose run django pipenv check && \
+        docker-compose run django py.test
