--- a/{{cookiecutter.project_slug}}/compose/vue/Dockerfile
+++ b/{{cookiecutter.project_slug}}/compose/vue/Dockerfile
@@ -3,5 +3,6 @@ FROM node
 WORKDIR /app
 
 ADD package.json /tmp/package.json
-RUN cd /tmp && yarn --pure-lockfile
+ADD package-lock.json /tmp/package-lock.json
+RUN cd /tmp && npm i
 RUN cd /app && ln -s /tmp/node_modules
