chore: update preparations

--- a/{{cookiecutter.project_slug}}/env.example
+++ b/{{cookiecutter.project_slug}}/env.example
@@ -1,20 +1,17 @@
-# Production settings (uncomment for production)
-#DJANGO_SETTINGS_MODULE=config.settings.production
+# Django
+DEBUG=True  # change for production
+SECRET_KEY=CHANGEME!!!
 
-# General settings
-DJANGO_DOMAIN={{cookiecutter.domain}}
-DJANGO_ALLOWED_HOSTS=.{{ cookiecutter.domain }}
-DJANGO_SECRET_KEY=CHANGEME!!!
+DOMAIN=http://localhost:8000  # change for production
+ALLOWED_HOSTS=*  # change for production
+
+EMAIL_PORT=1025  # change for production
+EMAIL_HOST=mailhog  # change for production
 
 # PostgreSQL
-POSTGRES_USER=postgresuser
+POSTGRES_DB={{cookiecutter.project_slug}}
 POSTGRES_PASSWORD=mysecretpass
-
-# Used with email
-DJANGO_MAILGUN_API_PUB=
-DJANGO_MAILGUN_API_KEY=
-MAILGUN_SENDER_DOMAIN=mg.{{cookiecutter.domain}}
-DJANGO_SERVER_EMAIL=info@{{cookiecutter.domain}}
+POSTGRES_USER=postgresuser
 
 {% if cookiecutter.use_sentry == 'y' -%}
 # Sentry
