fix: typo in dev.conf

--- a/{{cookiecutter.project_slug}}/nginx/dev.conf
+++ b/{{cookiecutter.project_slug}}/nginx/dev.conf
@@ -41,7 +41,7 @@ http {
     }
 
     # backend urls
-    location ~ ^/(admin|{% if cookiecutter.api == "REST" %}api{% elif cookiecutter.api == "GraphQL" %}graphql{% endif %}) {) {
+    location ~ ^/(admin|{% if cookiecutter.api == "REST" %}api{% elif cookiecutter.api == "GraphQL" %}graphql{% endif %}) {
       proxy_redirect off;
       proxy_pass http://backend;
       proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
