--- a/{{cookiecutter.project_slug}}/frontend/package.json
+++ b/{{cookiecutter.project_slug}}/frontend/package.json
@@ -14,7 +14,10 @@
     "vue": "^2.5.17",
     {% if cookiecutter.api == "GraphQL" %}"vue-apollo": "^3.0.0-beta.20",{% endif %}
     "vue-router": "^3.0.1",
-    {% if cookiecutter.use_sentry == 'y' %}"@sentry/vue": "^6.3.5",{% endif %}
+    {% if cookiecutter.use_sentry == 'y' %}
+    "@sentry/vue": "^6.3.5",
+    "@sentry/tracing": "^6.3.5",
+    {% endif %}
     {% if cookiecutter.analytics == "Google Analytics" %}"vue-analytics": "^5.16.0",{% endif %}
     {% if cookiecutter.analytics == "Yandex Metrika" %}{% endif %}
     "vuex": "^3.0.1"
